@@ -488,4 +488,8 @@
   <block id="eb5a861bf39cbc8f1c04a5223199b242" category="list-text">Puede seleccionar *Anterior* para acceder a páginas anteriores y modificar la configuración del plan como se describe en la sección anterior.</block>
   <block id="a788f47234ccaf5adf5a6ea422148ef6" category="list-text">Una vez que haya personalizado el plan según sus necesidades, puede guardar el plan o descargar el informe del plan como un archivo PDF.</block>
   <block id="123186fd98b69e2b3d463c83c49edfe7" category="section-title">19 de septiembre de 2024</block>
+  <block id="3197d9ffc65dc1fe1469440d8891e79d" category="doc">Ayuda de la relación de reducción de datos del asesor de migración de VMware</block>
+  <block id="10ced15d9df199f8cb002561b8728770" category="paragraph">Esta versión de Workload Factory para VMware cuenta con un asistente de reducción de la tasa de datos. El asistente de la relación de reducción de datos te ayuda a decidir qué relación es la mejor para tu inventario de VMware y el estado de almacenamiento cuando se prepara para la incorporación de cloud AWS.</block>
+  <block id="dc9ea462821ad27445bd89faaafc765c" category="paragraph">Selecciona *Ayudarme a decidir* si no estás seguro de qué relación elegir. Aparece el cuadro de diálogo _Asistente de relación de reducción de datos_. Selecciona las sentencias que se apliquen al inventario y al estado de almacenamiento de tu equipo virtual. El asistente recomendará una tasa de reducción de datos adecuada. Selecciona *Aplicar* para usar la relación recomendada.</block>
+  <block id="d9f5899ddcae7952c9df69e075c822e2" category="section-title">3 de noviembre de 2024</block>
 </blocks>
