@@ -10,7 +10,7 @@ settings:
   rss_page: whats-new.html
   release_notes_autogen:
     release_notes_repo: workload-relnotes
-  langs: es-es,us-en,de-de,fr-fr,it-it,pt-br,ja-jp,ko-kr,zh-cn,zh-tw
+  langs: es-es,us-en,ja-jp,ko-kr,zh-cn,zh-tw,de-de,fr-fr,it-it
 sidebar:
   entries:
   - title: Documentos para cargas de trabajo de VMware
@@ -29,6 +29,16 @@ sidebar:
       url: "/quick-start-native.html"
   - title: Utilice el asesor de migración de VMware
     entries:
+    - title: Migrar a Amazon EC2
+      entries:
+      - title: Capture las configuraciones actuales de sus máquinas virtuales
+        url: "/capture-vm-configurations-native.html"
+      - title: Cree un plan de despliegue con el asesor de migración
+        url: "/launch-onboarding-advisor-native.html"
+      - title: Implementa el sistema de archivos FSx para ONTAP recomendado
+        url: "/deploy-fsx-file-system.html"
+      - title: Migre sus datos a la nueva infraestructura
+        url: "/migrate-data-native.html"
     - title: Migrar a VMware Cloud en AWS
       entries:
       - title: Capture las configuraciones actuales de sus máquinas virtuales
@@ -41,16 +51,6 @@ sidebar:
         url: "/connect-sddc-to-fsx.html"
       - title: Migre sus datos a la nueva infraestructura
         url: "/migrate-data.html"
-    - title: Migrar a Amazon EC2
-      entries:
-      - title: Capture las configuraciones actuales de sus máquinas virtuales
-        url: "/capture-vm-configurations-native.html"
-      - title: Cree un plan de despliegue con el asesor de migración
-        url: "/launch-onboarding-advisor-native.html"
-      - title: Implementa el sistema de archivos FSx para ONTAP recomendado
-        url: "/deploy-fsx-file-system.html"
-      - title: Migre sus datos a la nueva infraestructura
-        url: "/migrate-data-native.html"
   - title: Conocimiento y apoyo
     entries:
     - title: Regístrese para recibir soporte
